feat: Update dependencies and configurations
Updates project dependencies, including React, Leaflet, and Vite, to their latest stable versions. Also refactors the Vite configuration to properly load environment variables and enables TypeScript compilation before building. Introduces a new footer displaying project credits and the AI model used, and updates styling for better visual consistency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stadiumap</title>
+    <title>Stadiumap - World Football Explorer</title>
+    <!-- Using Tailwind via CDN for simplicity in this specific setup, 
+         though a local PostCSS setup is recommended for larger productions -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -29,22 +31,34 @@
       .leaflet-container {
         background: #0f172a; /* Slate 900 to match theme */
       }
+      
+      /* Animation Utilities */
+      @keyframes spin-slow {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
+      .animate-spin-slow {
+        animation: spin-slow 3s linear infinite;
+      }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "react-leaflet": "https://aistudiocdn.com/react-leaflet@^5.0.0",
+    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-leaflet": "https://aistudiocdn.com/react-leaflet@^5.0.0"
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body class="bg-slate-950 text-white overflow-hidden">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
