feat: Improve Gemini API integration and error handling
Adds robust handling for missing Gemini API keys, preventing application crashes during development or runtime. Includes a fallback mechanism to return informative messages when the API key is not configured, enhancing user experience. Also, updates the CDN comment in `index.html` to reflect recommended practices.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stadiumap - World Football Explorer</title>
-    <!-- Using Tailwind via CDN for simplicity in this specific setup, 
-         though a local PostCSS setup is recommended for larger productions -->
+    <!-- Using Tailwind via CDN for simplicity. For a robust production build, consider installing tailwindcss via npm -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
