--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       crossorigin=""
     />
     <style>
+      html, body, #root {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
@@ -29,6 +36,8 @@
       }
       .leaflet-container {
         background: #0f172a; /* Slate 900 to match theme */
+        width: 100%;
+        height: 100%;
       }
       
       /* Animation Utilities */
@@ -40,7 +49,7 @@
         animation: spin-slow 3s linear infinite;
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -56,7 +65,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-950 text-white overflow-hidden">
+  <body class="bg-slate-950 text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
