--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stadiumap - World Football Explorer</title>
+    <title>Stadiumap</title>
     <!-- Using Tailwind via CDN for simplicity. For a robust production build, consider installing tailwindcss via npm -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
