--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Stadiumap - World Football Explorer</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="public/favicon.ico" />
     <!-- Using Tailwind via CDN for simplicity. For a robust production build, consider installing tailwindcss via npm -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
